Table Users {
  id uuid [pk]
  login varchar [not null, unique]
  password varchar [not null]
  is_admin boolean [not null]
  sex boolean [not null]
  weight int [not null]
  age int [not null]
  is_pregnant boolean [not null]
  is_driver boolean [not null]
}

Table Medicine {
  id uuid [pk]
  form_id uuid [not null]
  unit_id uuid [not null]
  name varchar [not null]
  expire_time int [not null]
  effect_on_driver boolean [not null]
  effect_on_pregnant boolean [not null]
  method_of_application varchar [not null]
  is_prescription boolean [not null]
}

Table Form {
  id uuid [pk]
  name varchar [not null]
}

Table Unit {
  id uuid [pk]
  name varchar [not null]
}

Table Dosage {
  id uuid [pk]
  medicine_id uuid [not null]
  value_from int [not null]
  value_to int [not null]
  dosage_type varchar [not null]
  dosage_value float [not null]
  number_of_doses_per_day int [not null]
}

Table Substance {
  id uuid [pk]
  name varchar [not null]
}

Table Illness {
  id uuid [pk]
  name varchar [not null]
}

Table Recommendations {
  id uuid [pk, default: `gen_random_uuid()`]
  medicine_id uuid [not null]
  illness_id uuid [not null]
}

Table Contraindications {
  id uuid [pk, default: `gen_random_uuid()`]
  medicine_id uuid [not null]
  illness_id uuid [not null]
}

Table Medicine_Substance {
  id uuid [pk, default: `gen_random_uuid()`]
  medicine_id uuid [not null]
  substance_id uuid [not null]
  concentration float [not null]
}

Table User_Illness {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  illness_id uuid [not null]
}

Table User_Substance {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  substance_id uuid [not null]
}

Table User_Medicine {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  medicine_id uuid [not null]
  date_of_manufacture date [not null]
  quantity float [not null]
}

Ref: Medicine.unit_id > Unit.id
Ref: Medicine.form_id > Form.id

Ref: Dosage.medicine_id > Medicine.id

Ref: Recommendations.medicine_id > Medicine.id
Ref: Recommendations.illness_id > Illness.id

Ref: Contraindications.medicine_id > Medicine.id
Ref: Contraindications.illness_id > Illness.id

Ref: Medicine_Substance.medicine_id > Medicine.id
Ref: Medicine_Substance.substance_id > Substance.id

Ref: User_Illness.user_id > Users.id
Ref: User_Illness.illness_id > Illness.id

Ref: User_Substance.user_id > Users.id
Ref: User_Substance.substance_id > Substance.id

Ref: User_Medicine.user_id > Users.id
Ref: User_Medicine.medicine_id > Medicine.id
